# serializer version: 1
# name: test_report_filters[-1-None-400]
  dict({
    'errors': list([
      dict({
        'code': 'min_value',
        'detail': 'Ensure this value is greater than or equal to 1.',
        'source': dict({
          'pointer': '/data/attributes/id',
        }),
        'status': '400',
      }),
    ]),
  })
# ---
# name: test_report_filters[1,2-0.5-400]
  dict({
    'errors': list([
      dict({
        'code': 'invalid',
        'detail': 'Enter a whole number.',
        'source': dict({
          'pointer': '/data/attributes/reviewer',
        }),
        'status': '400',
      }),
    ]),
  })
# ---
# name: test_report_filters[1,2.6-1-400]
  dict({
    'errors': list([
      dict({
        'code': 'invalid',
        'detail': 'Enter a whole number.',
        'source': dict({
          'pointer': '/data/attributes/id',
        }),
        'status': '400',
      }),
    ]),
  })
# ---
# name: test_report_filters[1-None-200]
  dict({
    'data': list([
    ]),
    'meta': dict({
      'total-time': '00:00:00',
    }),
  })
# ---
# name: test_report_filters[None--1-400]
  dict({
    'errors': list([
      dict({
        'code': 'min_value',
        'detail': 'Ensure this value is greater than or equal to 1.',
        'source': dict({
          'pointer': '/data/attributes/reviewer',
        }),
        'status': '400',
      }),
    ]),
  })
# ---
# name: test_report_filters[None-None-200]
  dict({
    'data': list([
    ]),
    'meta': dict({
      'total-time': '00:00:00',
    }),
  })
# ---
# name: test_report_intersection_partial
  dict({
    'data': dict({
      'attributes': dict({
        'billed': None,
        'can-verify': False,
        'comment': 'test',
        'not-billable': None,
        'rejected': False,
        'review': None,
        'verified': None,
      }),
      'id': '',
      'relationships': dict({
        'customer': dict({
          'data': None,
        }),
        'project': dict({
          'data': None,
        }),
        'task': dict({
          'data': None,
        }),
        'user': dict({
          'data': None,
        }),
      }),
      'type': 'report-intersections',
    }),
    'meta': dict({
      'count': 2,
    }),
  })
# ---
# name: test_report_notify_rendering
  '''
  
  Some of your reports have been changed.
  
  Reviewer: Test User
  
  
  Date: 01 January 2022
  Duration: 1:00 (h:mm)
  Task: Brown LLC > Synchronized impactful attitude > LLC
  
  
  * Comment
    [old] original comment
    [new] some other comment
  
  ---
  
  Date: 01 February 2022
  Duration: 2:30 (h:mm)
  
  Comment: some other comment
  
  * Task
    [old] Brown LLC > Synchronized impactful attitude > and Sons
    [new] Brown LLC > Synchronized impactful attitude > LLC
  
  ---
  
  Date: 01 March 2022
  Duration: 3:15 (h:mm)
  
  
  
  * Task
    [old] Brown LLC > Synchronized impactful attitude > Group
    [new] Brown LLC > Synchronized impactful attitude > LLC
  
  * Comment
    [old] foo
    [new] some other comment
  
  ---
  
  Date: 01 March 2022
  Duration: 0:15 (h:mm)
  Task: Brown LLC > Synchronized impactful attitude > LLC
  Comment: some other comment
  
  * Not_Billable
    [old] True
    [new] False
  
  ---
  
  '''
# ---
